# ukr-news-classifier

./: .gitignore  flake.nix  pyproject.toml
app/: command.py  load_datasets.py  main.py  model.py  preprocess.py
